lesson 10 hw10 begin